# smart-aural-exciter

./: .gitignore  CMakeLists.txt  README.md
.cursor/: README.md
docs/spec/: 01-scope-freeze.md  02-measurements.md  03-dsp-architecture.md
docs/validation/: 04-validation-suite.md
docs/validation/reaper/: README.md
docs/validation/refs/: corpus.txt
docs/validation/refs/electronic/: .gitkeep
docs/validation/refs/rock/: .gitkeep
docs/validation/refs/stress/: .gitkeep
docs/validation/refs/vocal/: .gitkeep
docs/validation/scorecards/: TEMPLATE.md
src/dsp/: ActivitySnapshot.h  AnalysisBank.cpp  AnalysisBank.h  DspEngine.cpp  DspEngine.h  ErbBands.cpp  ErbBands.h  HarmonicGenerator.cpp  HarmonicGenerator.h  HarshnessGuard.cpp  HarshnessGuard.h  MeterTap.cpp  MeterTap.h  Oversampler.cpp  Oversampler.h  SafetyLimiter.cpp  SafetyLimiter.h
src/plugin/: Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/ui/: ActivityView.cpp  ActivityView.h  AdvancedPanel.cpp  AdvancedPanel.h  MeterView.cpp  MeterView.h  SimplePanel.cpp  SimplePanel.h
tests/: CMakeLists.txt
tests/dsp/: DeterministicRenderTest.cpp  ErbLayoutTest.cpp  SafetyLimiterTest.cpp
tools/measure/: measure_loudness.py
tools/reaper/: render_corpus.lua
